--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "archs/apple2js"]
-	path = archs/apple2js
+[submodule "webroot/archs/apple2js"]
+	path = webroot/archs/apple2js
 	url = git://github.com/mirkolofio/apple2js
